--- a/package.json
+++ b/package.json
@@ -1,17 +1,54 @@
 {
   "name": "nx-web-doctor",
   "version": "0.0.1",
-  "main": "index.js",
-  "repository": "https://github.com/zqqiang/nx-web-doctor.git",
-  "author": "zqqiang <qiangzhaoqing@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "marko-starter": "^2.0.4"
-  },
+  "description": "Van Doctor Web Demo with Marko.js",
+  "main": "server.js",
   "scripts": {
-    "start": "marko-starter server",
-    "build": "marko-starter build",
-    "serve-static": "marko-starter serve-static"
+    "build": "webpack --mode production",
+    "start": "npm run build && node server.js",
+    "dev": "browser-refresh server.js --dev",
+    "lint": "eslint src",
+    "test": "npm run lint"
   },
-  "static-repo": "git@github.com:zqqiang/nx-web-doctor.git#gh-pages"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zqqiang/nx-web-doctor.git"
+  },
+  "author": "zqqiang",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zqqiang/nx-web-doctor/issues"
+  },
+  "homepage": "https://github.com/zqqiang/nx-web-doctor#readme",
+  "dependencies": {
+    "app-module-path": "^2.2.0",
+    "bootstrap-material-design": "^4.1.1",
+    "browser-refresh-taglib": "^1.1.0",
+    "compression": "^1.7.3",
+    "eslint": "^5.9.0",
+    "express": "^4.16.4",
+    "file-loader": "^2.0.0",
+    "jquery": "3.2.1",
+    "lasso": "^3.2.7",
+    "lasso-marko": "^2.4.6",
+    "marko": "^4.13.10",
+    "marko-loader": "^1.3.3",
+    "popper.js": "^1.14.6",
+    "serve-static": "^1.13.2",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.3.1",
+    "browser-refresh": "^1.7.3",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
+  }
 }
