--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/zqqiang/nx-web-doctor#readme",
   "dependencies": {
     "app-module-path": "^2.2.0",
-    "bootstrap-material-design": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "browser-refresh-taglib": "^1.1.0",
     "compression": "^1.7.3",
     "eslint": "^5.9.0",
@@ -33,6 +33,7 @@
     "lasso-marko": "^2.4.6",
     "marko": "^4.13.10",
     "marko-loader": "^1.3.3",
+    "mdbootstrap": "^4.5.16",
     "popper.js": "^1.14.6",
     "serve-static": "^1.13.2",
     "webpack": "^4.26.0",
