--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "app-module-path": "^2.2.0",
     "browser-refresh-taglib": "^1.1.0",
     "compression": "^1.7.3",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.9.0",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
