--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "gh-pages": "^2.0.1"
   }
 }
